--- a/css/main.css
+++ b/css/main.css
@@ -8337,3 +8337,6 @@ img.mfp-img {
   top: 0;
   right: 0;
   padding-top: 0; }
+ #Accueil{
+	 background-image:url(../images/accueil/plage-de-l-ecluse-dinard.jpg);
+ }
